updated swagger, updated transactions and balances
